syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/ChokeGuy/simple-bank/pb";

message CreateUserRequest {
    string userName = 1;
    string fullName =2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

